--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <header>
+      <a class="login">Login</a>
       <h1>5280 Landmarks</h1>
-      <button type="button">Login</button>
     </header>
     <nav>
-      <ul>
-        <li>Building</li>
-        <li>Art</li>
-        <li>Featured</li>
+      <ul class = "menu">
+        <li class="menu">Building</li>
+        <li class="menu">Art</li>
+        <li class="menu">Featured</li>
       </ul>
     </nav>
     <section class="hero">
@@ -30,21 +30,21 @@
     Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus. </p>
 
     <section class = "featured">
-      <a href= "">
+      <a class = "place" href= "https://www.larimersquare.com/">
         <h3>Larimer Square</h3>
         <img src="images/2.jpg">
       </a>
-      <a href="">
+      <a class = "place" href="https://en.wikipedia.org/wiki/Denver_Millennium_Bridge">
         <h3>Millenium Bridge</h3>
         <img src="images/5.jpg">
       </a>
-      <a href= "">
+      <a class = "place" href= "https://mollybrown.org/">
         <h3>Molly Brown House</h3>
         <img src="images/6.jpg">
       </a>
     </section>
 
     <p>Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta, ancillae quaestio no quo, id vim blandit voluptatum.</p>
-    
+
   </body>
 </html>
