--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <header>
-      <a class="login">Login</a>
+      <a class="login"><h4>Login</h4></a>
       <h1>5280 Landmarks</h1>
     </header>
+
     <nav>
       <ul class = "menu">
         <li class="menu">Building</li>
@@ -18,33 +19,38 @@
         <li class="menu">Featured</li>
       </ul>
     </nav>
+
     <section class="hero">
       <h1>Denver Art Museum</h1>
     </section>
-    <p> Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.<br>
 
-    Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea, an ignota signiferumque nec. No dicunt sanctus moderatius sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea solet placerat phaedrum vis. Et vix causae aliquam, commodo blandit imperdiet ex his.<br>
+    <section class="text">
+      <p> Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.</p>
 
-    Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque. Eu pri reque sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.<br>
+      <p>Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea, an ignota signiferumque nec. No dicunt sanctus moderatius sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea solet placerat phaedrum vis. Et vix causae aliquam, commodo blandit imperdiet ex his.</p>
 
-    Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus. </p>
+      <p>Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque. Eu pri reque sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.</p>
+
+      <p>Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus. </p>
+    </section>
 
     <section class = "featured">
       <a class = "place" href= "https://www.larimersquare.com/">
         <h3>Larimer Square</h3>
-        <img src="images/2.jpg">
+        <div class="image"><img src="images/2.jpg"></div>
       </a>
       <a class = "place" href="https://en.wikipedia.org/wiki/Denver_Millennium_Bridge">
         <h3>Millenium Bridge</h3>
-        <img src="images/5.jpg">
+        <div class="image"><img src="images/5.jpg"></div>
       </a>
       <a class = "place" href= "https://mollybrown.org/">
         <h3>Molly Brown House</h3>
-        <img src="images/6.jpg">
+        <div class="image"><img src="images/6.jpg"></div>
       </a>
     </section>
 
-    <p>Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta, ancillae quaestio no quo, id vim blandit voluptatum.</p>
-
+    <section class="text">
+      <p>Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta, ancillae quaestio no quo, id vim blandit voluptatum.</p>
+    </section>
   </body>
 </html>
